# person

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: test.yml
install/: local_setup.sh  setup.sh
install/mypkg/share/mypkg/: package.sh  package.xml  talk_listen.launch.py
install/person_msgs/share/ament_index/resource_index/package_run_dependencies/: person_msgs
install/person_msgs/share/ament_index/resource_index/parent_prefix_path/: person_msgs
install/person_msgs/share/person_msgs/: local_setup.sh  package.sh  package.xml
launch/: talk_listen.launch.py
log/: latest_build
mypkg/: listener.py  talker.py
test/: test.bash
